# HouseWise

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  app.json  cloudbuild.yaml  eas.json  new-project-auth-spec.md  package-lock.json  package.json  requirements.txt  tailwind.config.js  tsconfig.json
ai_agents/: coding-agent.md
app/: _layout.tsx  add-member.tsx  barcode-confirm.tsx  change-password.tsx  cookbook-add.tsx  cookbook-detail.tsx  cookbook-edit.tsx  cookbook.tsx  dietary-preferences.tsx  edit-profile.tsx  family-members.tsx  generate-report.tsx  health-preferences.tsx  image-scan.tsx  index.tsx  low-stock.tsx  (+10 more)
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: logging_setup.py  main.py  settings.py  supabase_client.py
backend/app/auth/: deps.py  password_policy.py  router.py  schemas.py
backend/app/cookbook/: router.py  schemas.py
backend/app/household/: router.py  schemas.py
backend/app/items/: router.py  schemas.py
backend/app/low_stock/: router.py  schemas.py
backend/app/me/: router.py  schemas.py
backend/app/meal_plan/: router.py  schemas.py
backend/app/prices/: router.py  schemas.py
backend/app/stores/: router.py  schemas.py
backend/app/to_buy/: router.py  schemas.py
backend/mathquest_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth.py  test_chaos.py  test_cookbook.py  test_household.py  test_items.py  test_items_scan.py  test_low_stock.py  test_me.py  test_meal_plan.py  test_prices.py  test_stores.py  test_to_buy.py
(+106 files in other folders)
