[project]
name = "housewise-backend"
version = "0.1.0"
description = "HouseWise FastAPI backend — household, items, low-stock, stores, profile, scan."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic[email]>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "supabase>=2.9,<3.0",
    "gotrue>=2.9,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "pyjwt>=2.8,<3.0",
    "httpx>=0.27,<1.0",
    # AI agents (ai_agents/image-agent/) — runtime deps for POST /items/scan-image.
    "anthropic>=0.40.0",
    "easyocr>=1.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-env>=1.1.5",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
env_files = [".env.test"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
